--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,6 @@
 {
-    "builds": [
-        {
-            "src": "package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "dist"
-            }
-        }
-    ],
-    "routes": [
-        {
-            "handle": "filesystem"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/index.html"
-        }
-    ]
+    "buildCommand": "npm run vercel-build",
+    "outputDirectory": "dist",
+    "framework": null,
+    "installCommand": "npm install --legacy-peer-deps"
 }
