--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,16 @@
     "buildCommand": "npm run vercel-build",
     "outputDirectory": "dist",
     "framework": null,
-    "installCommand": "npm install --legacy-peer-deps"
+    "installCommand": "npm install --legacy-peer-deps",
+    "functions": {
+        "app/api/**/*.js": {
+            "runtime": "nodejs18.x"
+        }
+    },
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
+        }
+    ]
 }
